# refacta

./: .gitignore  LICENSE  README.md  alphatales-refactor.bat  alphatales-refactor.ps1  ar.cmd  debug.ps1  pyproject.toml  requirements.txt  run.py  setup-profile.ps1
.claude/: CLAUDE.md  settings.json
.claude/agents/: build-runner.md  compliance-checker.md  nextjs-refactorer.md  project-scanner.md  python-refactorer.md  rules-interpreter.md  summary-reporter.md
.claude/skills/architecture_guidelines/: SKILL.md
.claude/skills/auth_standards/: SKILL.md
.claude/skills/component_standards/: SKILL.md
.claude/skills/data_fetching/: SKILL.md
.claude/skills/feature_hooks/: SKILL.md
.claude/skills/form_handling/: SKILL.md
.claude/skills/frontend_architecture/: SKILL.md
.claude/skills/frontend_security/: SKILL.md
.claude/skills/migration_patterns/: SKILL.md
.claude/skills/nextjs_app_router/: SKILL.md
.claude/skills/observability/: SKILL.md
.claude/skills/package_installation/: SKILL.md
.claude/skills/refactor_rules/: SKILL.md
.claude/skills/shadcn_ui/: SKILL.md
.claude/skills/state_management/: SKILL.md
.claude/skills/tailwind_standards/: SKILL.md
src/refactor_agent/: __init__.py  cli.py  models.py  orchestrator.py
src/refactor_agent/console/: __init__.py  app.py  autocomplete.py  diff_viewer.py  menu.py  session.py  textual_ui.py  ui.py
src/refactor_agent/pipeline/: __init__.py  apply_rules.py  build_run.py  reporting.py  scan.py  verify_rules.py
src/refactor_agent/rules/: __init__.py  loader.py  model.py
src/refactor_agent/sdk/: __init__.py  client.py  report_tracker.py
src/refactor_agent/utils/: __init__.py  file_ops.py  logger.py
tests/: __init__.py
